Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16936

ListView highlight occasionally gets stuck

XMLWordPrintable

    • a1bd1690851c905d79ae694c15a04fd12a717f3e (qt/tqtc-qtdeclarative/5.12.0)

      This was seen with QML from qt:4.7 at 5498dcd7b10e147734a3414cab824b8b435aa3d9

      Not sure how to reproduce it reliably, but it happens sometimes when
      clicking an item in the left-hand side ListView in Qt Component's
      stretchbench test app, perhaps when the mouse pointer is not completely
      still when the click occurs. See attached snapshot.

        For Gerrit Dashboard: QTBUG-16936
        # Subject Branch Project Status CR V

            martjone Martin Jones (closed Nokia identity) (Inactive)
            mathiasm Mathias Malmqvist
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes