View highlight could stop tracking currentItem.

This happens if the currentIndex is changed
while the view is moving.  The only time the highlight should
not move to the currentItem is in StrictlyEnforceRange mode when
the user is moving the view.

Change-Id: I4d04174c88cde180f9f8a01cbd33af3edbcc3d4d
Fixes: QTBUG-16936
Reviewed-on: http://codereview.qt.nokia.com/2416
Reviewed-by: Bea Lam <bea.lam@nokia.com>
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>